# microfactory-node

./: .env.example  .gitignore  Makefile  README.md  app.py  package.json  pnpm-lock.yaml  pyproject.toml  requirements-zerogpu.txt  requirements.txt  test_core.py
assets/: benchy.glb  bridge.glb  cube.glb  overhang.glb  vase.glb
assets/screenshots/: README.md
core/: __init__.py  chief_engineer.py  deliberation_log.py  field_log.py  inspector.py  ledger.py  llm.py  llm_zerogpu.py  llm_zerogpu_lora.py  models.py  nodes.py  prompts.py  reflect.py  seed_lessons.py  signups.py  spine.py  theme.py  viewer.py  widgets.py
data/: _modal_candidate_lessons.jsonl  lessons.jsonl  references.jsonl
data/finetune/: sft.eval.jsonl  sft.train.jsonl
docs/: RUNBOOK.md  SPACE-DEPLOY.md
docs/_archive/: 01-SUBMISSION-DRAFT.md  03-EXECUTION-PLAN.md  04-BUILD-PROMPT.md  05-ENDGAME.md  06-CONTINGENCY.md  08-ZEROGPU-DEPLOY.md  CHIEF-ENGINEER-PLAN.md  INGESTION-WORKORDER.md  MODAL-WORKORDER.md  (+12 more)
ingest/: README.md  __init__.py  distill.py  modal_app.py  run.py
learn/: __init__.py  loop.py  policy.py
recordings/: .gitignore  EDITING.md  manifest.example.json  manifest.json  test_manifest.json
scripts/: __init__.py  assemble-video.py  bench_latency.py  capture.py  deploy_preflight.py  export-beat.sh  export_deliberation.py  export_trace.py  make_assets.py  preflight.py  publish.py  record-beat.sh  record-studio.cjs  record-studio.mjs  record-studio.sh  record.py  record_preflight.py  scripted_demo.py  verify_cdp.py
sim/: __init__.py  calibrate.py  outcome.py  virtual_printer.py
(+129 files in other folders)
